--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,8 @@
 <ul class="nav" role="menu">
     <li class="nav-home" role="menuitem"><a href="{{site.baseurl}}">Home</a></li>
+    <li class="nav-projects" role="menuitem"><a href="{{site.baseurl}}projects/">Projects</a></li>
+    <li class="nav-work" role="menuitem"><a href="{{site.baseurl}}work/">Work</a></li>
+    <li class="nav-challenges" role="menuitem"><a href="{{site.baseurl}}tag/challenges/">Challenges</a></li>
     <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}about/">About</a></li>
-    <li class="nav-getting-started" role="menuitem"><a href="{{site.baseurl}}tag/getting-started/">Getting Started</a></li>
     <li class="nav-try-ghost" role="menuitem"><a href="https://ghost.org">Try Ghost</a></li>
 </ul>
