--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -38,6 +38,8 @@ into the {body} of the default.hbs template -->
             </section>
 
         </article>
+        
+        <script id="dsq-count-scr" src="//https-raulcoroban-github-io-doxio.disqus.com/count.js" async></script>
 
     </div>
 </main>
