--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,7 +48,7 @@ into the {body} of the default.hbs template -->
 
             <section class="post-full-content">
                 <div class="kg-card-markdown">
-                    {{ post.content }}
+                    {{ content }}
                 </div>
             </section>
 
