--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,24 @@
-<ul class="nav" role="menu">
-    <li class="nav-home" role="menuitem"><a href="{{site.baseurl}}">Home</a></li>
-    <li class="nav-projects" role="menuitem"><a href="{{site.baseurl}}projects/">Projects</a></li>
-    <li class="nav-work" role="menuitem"><a href="{{site.baseurl}}work/">Work</a></li>
-    <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}about/">About</a></li>
+{% capture html %}
+<ul>
+    {% if include.context == "/" %}
+        <li class="{% if page.url == "/" %}active{% endif %}">
+            <a href="{{ site.baseurl }}/">{{ site.title }}</a>
+        </li>
+    {% endif %}
+
+    {% assign entries = site.pages | sort: "path" %}
+    {% for entry in entries %}
+
+        {% capture slug    %}{{ entry.url | split: "/"   | last                       }}{% endcapture %}
+        {% capture current %}{{ entry.url | remove: slug | remove: "//" | append: "/" }}{% endcapture %}
+
+        {% if current == include.context %}
+            <li class="{% if page.url contains entry.url %}active{% endif %}">
+                <a href="{{ site.baseurl }}{{ entry.url }}">{{ entry.title }}</a>
+                {% include navigation.html context=entry.url %}
+            </li>
+        {% endif %}
+
+    {% endfor %}
 </ul>
+{% endcapture %}{{ html | strip_newlines | replace:'    ','' | replace:'    ','' | replace:'  ',' ' }}
