--- a/_includes/site-nav.html
+++ b/_includes/site-nav.html
@@ -1,7 +1,7 @@
 <nav class="site-nav">
     <div class="site-nav-left">
         {% if page.navigation %}
-            {% include navigation.html %}
+            {% include navigation.yml %}
         {% endif %}
     </div>
     <div class="site-nav-right">
