--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,8 +1,6 @@
-{% for item in site.data.samplelist.toc %}
-    <h3>{{ item.title }}</h3>
-      <ul>
-        {% for entry in item.subfolderitems %}
-          <li><a href="{{ entry.url }}">{{ entry.page }}</a></li>
-        {% endfor %}
-      </ul>
-  {% endfor %}
+<ul class="nav" role="menu">
+    <li class="nav-home" role="menuitem"><a href="{{site.baseurl}}">Home</a></li>
+    <li class="nav-projects" role="menuitem"><a href="{{site.baseurl}}projects/">Projects</a></li>
+    <li class="nav-work" role="menuitem"><a href="{{site.baseurl}}work/">Work</a></li>
+    <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}about/">About</a></li>
+</ul>
