--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -114,6 +114,36 @@ body {
     background-size: cover;
 }
 
+.site-header:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
+    display: block;
+    background: rgba(0,0,0,0.18);
+}
+
+.site-header:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: auto;
+    left: 0;
+    z-index: 10;
+    display: block;
+    height: 80px;
+    background: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0));
+}
+
+.site-header.no-cover:before,
+.site-header.no-cover:after {
+    display: none;
+}
+
 .site-header-content {
     display: flex;
     flex-direction: column;
