--- a/_includes/site-nav.html
+++ b/_includes/site-nav.html
@@ -1,5 +1,8 @@
 <nav class="site-nav">
     <div class="site-nav-left">
+        <a class="site-nav-logo" href="/Doxio/">
+            <img src="/Doxio/assets/images/blog-icon.png" alt="Doxio">
+        </a>
         {% if page.navigation %}
             {% include navigation.html %}
         {% endif %}
