--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,9 @@ into the {body} of the default.hbs template -->
 
 <header class="site-header outer">
     <div class="inner">
+        <a class="site-nav-logo" href="/Doxio/">
+            <img src="/Doxio/assets/images/dark-logo-doxio.png" alt="Doxio">
+        </a>
         {% include site-nav.html %}
     </div>
 </header>
