--- a/_layouts/post-update.html
+++ b/_layouts/post-update.html
@@ -12,10 +12,7 @@ into the {body} of the default.hbs template -->
 
 <header class="site-header outer">
     <div class="inner">
-        <a class="site-nav-logo" href="/Doxio/">
-            <img src="/Doxio/assets/images/dark-logo-doxio.png" alt="Doxio">
-        </a>
-        {% include site-nav.html %}
+        {% include site-nav-page.html %}
     </div>
 </header>
 
