--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -8,12 +8,12 @@
         <div class="post-card-content">
             <a class="post-card-content-link" href="{{ site.baseurl }}{{ post.url | remove_first: '/' }}">
                 <header class="post-card-header">
-                    {% if post.tags.size == 1 %}
-                        <span class="post-card-tags">{{ tag | capitalize }}</span>
-                    {% endif %}
-
-                    {% if post.tags.size > 1 %}
+                    {% if post.tags.size > 0 %}
                         {% for tag in post.tags %}
+                            {% if post.tags.size == 1 %}
+                                <span class="post-card-tags">
+                            {% endif %}
+
                             {% if forloop.index == post.tags.size %}
                                 {{ tag | capitalize }} </span>
                             {% else %}
