--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -9,15 +9,12 @@
             <a class="post-card-content-link" href="{{ site.baseurl }}{{ post.url | remove_first: '/' }}">
                 <header class="post-card-header">
                     {% if post.tags.size > 0 %}
+                    <span class="post-card-tags">
                         {% for tag in post.tags %}
-                            {% if post.tags.size == 1 %}
-                                <span class="post-card-tags">
-                            {% endif %}
-
                             {% if forloop.index == post.tags.size %}
                                 {{ tag | capitalize }} </span>
                             {% else %}
-                               <span class="post-card-tags">{{ tag | capitalize }} &middot;
+                               {{ tag | capitalize }} &middot;
                             {% endif %}
                         {% endfor %}
                     {% endif %}
