--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -32,6 +32,23 @@ body {
     background: #f4f8fb;
 }
 
+.footnote {
+    overflow-x: hidden;
+    color: #bdc3c7
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-size: 1rem;
+    line-height: 1.4em;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 0;
+    text-rendering: optimizeLegibility;
+    background: #fff;
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -moz-font-feature-settings: "liga" on;
+}
+
 .img {
     display: block;
     width: 100%;
@@ -208,6 +225,8 @@ body {
     overflow-y: hidden;
     height: 40px;
     font-size: 1.2rem;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .site-nav-left {
