--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,5 +2,6 @@
     <li class="nav-home" role="menuitem"><a href="{{site.baseurl}}">Home</a></li>
     <li class="nav-work" role="menuitem"><a href="{{site.baseurl}}work/">Work</a></li>
     <li class="nav-projects" role="menuitem"><a href="{{site.baseurl}}projects/">Projects</a></li>
+    <li class="nav-series" role="menuitem"><a href="{{site.baseurl}}series/">Series</a></li>
     <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}about/">About</a></li>
 </ul>
