--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <ul class="nav" role="menu">
     <li class="nav-home" role="menuitem"><a href="{{site.baseurl}}">Home</a></li>
     <li class="nav-work" role="menuitem"><a href="{{site.baseurl}}work/">Work</a></li>
-    <li class="nav-projects" role="menuitem"><a href="{{site.baseurl}}projects/">Projects</a></li>
+    <li class="nav-projects" role="menuitem"><a href="{{site.baseurl}}projects/">Own Projects</a></li>
     <li class="nav-series" role="menuitem"><a href="{{site.baseurl}}series/">Series</a></li>
-    <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}about/">About</a></li>
+    <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}about/">About Me</a></li>
 </ul>
