--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -36,7 +36,8 @@ body {
     overflow-x: hidden;
     color: #bdc3c7
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    font-size: 1rem;
+    font-size: 2rem;
+    text-align: center;
     line-height: 1.4em;
     font-weight: 400;
     font-style: normal;
