--- a/_includes/site-nav-page.html
+++ b/_includes/site-nav-page.html
@@ -15,6 +15,7 @@
             {% if site.twitter %}
                 <a class="social-link social-link-tw" href="https://twitter.com/{{ site.twitter }}" target="_blank" rel="noopener">{% include twitter.html %}</a>
             {% endif %}
+                <a class="social-link social-link-tw" href="https://www.linkedin.com/in/rcoroban22/" target="_blank" rel="noopener">{% include linkedin.html %}</a>
         </div>
         {% if site.subscribers %}
             <a class="subscribe-button" href="#subscribe">Subscribe</a>
