--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,6 @@
 <ul class="nav" role="menu">
-    <li class="nav-designs" role="menuitem"><a href="{{site.baseurl}}">Designs</a></li>
+	<li class="nav-home" role="menuitem"><a href="{{site.baseurl}}">Home</a></li>
+    <li class="nav-designs" role="menuitem"><a href="{{site.baseurl}}designs/">Designs</a></li>
     <li class="nav-work" role="menuitem"><a href="{{site.baseurl}}work/">Work</a></li>
     <li class="nav-projects" role="menuitem"><a href="{{site.baseurl}}projects/">Own Projects</a></li>
     <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}about/">About Me</a></li>
