--- a/_includes/site-nav.html
+++ b/_includes/site-nav.html
@@ -12,7 +12,8 @@
             {% if site.twitter %}
                 <a class="social-link social-link-tw" href="https://twitter.com/{{ site.twitter }}" target="_blank" rel="noopener">{% include twitter.html %}</a>
             {% endif %}
-                <a class="social-link social-link-tw" href="https://www.linkedin.com/in/rcoroban22/" target="_blank" rel="noopener">{% include linkedin.html %}</a>
+                <a class="social-link social-link-li" href="https://www.linkedin.com/in/rcoroban22/" target="_blank" rel="noopener">{% include linkedin.html %}</a>
+                <a class="social-link social-link-nd" href="https://en.99designs.nl/profiles/raulcoroban" target="_blank" rel="noopener">{% include 99d.svg %}</a>
         </div>
         {% if site.subscribers %}
             <a class="subscribe-button" href="#subscribe">Subscribe</a>
