--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -292,7 +292,7 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
     display: block;
     margin: 0;
     padding: 10px 12px;
-    color: #fff;
+    color: #000;
     opacity: 0.8;
 }
 
