--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -432,9 +432,10 @@ h6 {
 }
 
 h1 {
-    margin: 0 0 0.5em 0;
+    margin: 0 0 .5em;
     font-size: 5rem;
     font-weight: 700;
+    color: #1dd1a1;
 }
 @media (max-width: 500px) {
     h1 {
