--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -84,6 +84,7 @@ body {
 .outer {
     position: relative;
     padding: 0 4vw;
+    background: rgb(0,0,0,0.05)
 }
 
 /* Centered content container blocks */
@@ -150,7 +151,7 @@ body {
     left: 0;
     z-index: 10;
     display: block;
-    background: rgba(0,0,0,0.18);
+    background: rgba(0,0,0,0.05);
 }
 
 .site-header:after {
@@ -186,7 +187,7 @@ body {
     z-index: 10;
     margin: 0;
     padding: 0;
-    font-size: 3.8rem;
+    font-size: 6.8rem;
     font-weight: 700;
 }
 
@@ -290,10 +291,10 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
 
 .nav li a {
     display: block;
-    margin: 0;
     padding: 10px 12px;
-    color: #000000;
-    opacity: 0.8;
+    color: #000;
+    opacity: .8;
+    font-weight: 600;
 }
 
 .nav li a:hover {
@@ -334,7 +335,7 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
 
 .social-link svg {
     height: 1.8rem;
-    fill: #fff;
+    fill: #000;
 }
 
 .social-link-fb svg {
@@ -356,8 +357,8 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
 .subscribe-button {
     display: block;
     padding: 4px 10px;
-    border: #fff 1px solid;
-    color: #fff;
+    border: #000 1px solid;
+    color: #000;
     font-size: 1.2rem;
     line-height: 1em;
     border-radius: 10px;
@@ -366,6 +367,8 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
 
 .subscribe-button:hover {
     text-decoration: none;
+    border: #000 1px fill;
+    color: #fff;
     opacity: 1;
 }
 
