--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -444,9 +444,9 @@ h1 {
 }
 
 h2 {
-    margin: 1.5em 0 0.5em 0;
+    margin: 1.5em 0 .5em;
     font-size: 2rem;
-    color: #95a5a6;
+    color: rgb(0,0,0,0.7);
 }
 @media (max-width: 500px) {
     h2 {
