--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -78,6 +78,7 @@ body {
 .site-main {
     z-index: 100;
     flex-grow: 1;
+    background: #f2f2f2;
 }
 
 /* Full width page blocks */
@@ -151,7 +152,6 @@ body {
     left: 0;
     z-index: 10;
     display: block;
-    background: rgba(0,0,0,0.05);
 }
 
 .site-header:after {
@@ -164,7 +164,6 @@ body {
     z-index: 10;
     display: block;
     height: 80px;
-    background: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0));
 }
 
 .site-header.no-cover:before,
@@ -189,6 +188,7 @@ body {
     padding: 0;
     font-size: 6.8rem;
     font-weight: 700;
+    color: #00c392;
 }
 
 .site-logo {
@@ -199,10 +199,11 @@ body {
     z-index: 10;
     margin: 0;
     padding: 5px 0;
-    font-size: 2.2rem;
+    font-size: 2.6rem;
     font-weight: 300;
     letter-spacing: 0.5px;
-    opacity: 0.8;
+    opacity: 0.6;
+    color: #000;
 }
 
 @media (max-width: 500px) {
@@ -335,7 +336,7 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
 
 .social-link svg {
     height: 1.8rem;
-    fill: #000;
+    fill: rgb(0, 0, 0, .7);
 }
 
 .social-link-fb svg {
@@ -357,19 +358,17 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
 .subscribe-button {
     display: block;
     padding: 4px 10px;
-    border: #000 1px solid;
-    color: #000;
+    border: #00c392 1px solid;
+    color: #00c392;
     font-size: 1.2rem;
     line-height: 1em;
     border-radius: 10px;
-    opacity: 0.8;
+    opacity: 1;
 }
 
 .subscribe-button:hover {
     text-decoration: none;
-    border: #000 1px fill;
-    color: #fff;
-    opacity: 1;
+    opacity: 0.7;
 }
 
 .rss-button {
