--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1938,16 +1938,16 @@ Usage (In Ghost editor):
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    color: rgba(255,255,255,0.7);
+    color: rgba(0,0,0,0.5);
     font-size: 1.3rem;
 }
 
 .site-footer-content a {
-    color: rgba(0,0,0,0.7);
+    color: rgba(0,0,0,0.9);
 }
 
 .site-footer-content a:hover {
-    color: rgba(0,0,0,1);
+    color: #00c392;
     text-decoration: none;
 }
 
