--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -139,7 +139,7 @@ body {
     padding-top: 12px;
     padding-bottom: 12px;
     color: #fff;
-    background: #f2f2f2;
+    background: #fff;
     background-size: cover;
 }
 
