--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -78,7 +78,7 @@ body {
 .site-main {
     z-index: 100;
     flex-grow: 1;
-    background: #f2f2f2;
+    background: #0e212e;
 }
 
 /* Full width page blocks */
@@ -129,7 +129,7 @@ body {
     padding-top: 100px;
     padding-bottom: 12px;
     color: #fff;
-    background: #f2f2f2;
+    background: #0e212e;
     background-size: cover;
 }
 
@@ -203,7 +203,7 @@ body {
     font-weight: 300;
     letter-spacing: 0.5px;
     opacity: 0.6;
-    color: #000;
+    color: #fff;
 }
 
 @media (max-width: 500px) {
@@ -293,7 +293,7 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
 .nav li a {
     display: block;
     padding: 10px 12px;
-    color: #000;
+    color: #fff;
     opacity: .8;
     font-weight: 600;
 }
@@ -336,7 +336,7 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
 
 .social-link svg {
     height: 1.8rem;
-    fill: rgb(0, 0, 0, .7);
+    fill: rgb(255, 255, 255, .6);
 }
 
 .social-link-fb svg {
