--- a/_includes/site-nav.html
+++ b/_includes/site-nav.html
@@ -15,7 +15,7 @@
                 <a class="social-link social-link-li" href="https://www.linkedin.com/in/rcoroban22/" target="_blank" rel="noopener">{% include linkedin.html %}</a>
         </div>
         {% if site.subscribers %}
-            <a class="subscribe-button" href="#subscribe">Subscribe</a>
+            <a class="subscribe-button" href="https://raulcoroban.github.io/Doxio/">Switch to Design</a>
         {% endif %}
     </div>
 </nav>
