--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <ul class="nav" role="menu">
 	<li class="nav-home" role="menuitem"><a href="{{site.baseurl}}">Home</a></li>
-    <li class="nav-designs" role="menuitem"><a href="{{site.baseurl}}designs/">Designs</a></li>
-    <li class="nav-work" role="menuitem"><a href="{{site.baseurl}}work/">Work</a></li>
-    <li class="nav-projects" role="menuitem"><a href="{{site.baseurl}}projects/">Own Projects</a></li>
-    <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}about/">About Me</a></li>
+    <li class="nav-stories" role="menuitem"><a href="{{site.baseurl}}stories/">Stories</a></li>
+    <li class="nav-pieces" role="menuitem"><a href="{{site.baseurl}}pieces/">Pieces</a></li>
+    <li class="nav-thoughts" role="menuitem"><a href="{{site.baseurl}}thoughts/">Thoughts</a></li>
+    <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}about/">About This Me</a></li>
 </ul>
